# OPEN_ENV_HACKATHON

./: .gitignore  CLAUDE.md  Dockerfile  README.md  inference.py  openenv.yaml  portal.db  pyproject.toml  requirements.txt  seed_db.py
portal/: actions.py  database.py  pages.py  session.py
server/: app.py  models.py
tasks/: task_1.py  task_2.py  task_3.py
